--- a/src/components/AboutMe.module.css
+++ b/src/components/AboutMe.module.css
@@ -1,11 +1,10 @@
 .aboutMe {
     padding-top: 60px;
-    height: 600px;
 }
 .aboutMeSection {
     display: flex;
     width: 70%;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 p {
     font-size: 1.2em;
@@ -27,8 +26,22 @@ p {
 .skillsListItem {
     margin-bottom: 10px;
     margin-right: 10px;
-    background-color: var(--quaternary-color);
+    background-color: var(--tertiary-color);
     padding: 15px;
     border-radius: 5px;
     font-size: 1.1em;
+}
+
+@media screen and (max-width: 992px) {
+    .aboutMeSection {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 5em;
+    }
+    .skillsList {
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 2em;
+    }
 }
