--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -24,7 +24,7 @@ footer {
     display: flex;
     justify-content: space-around;
     color: var(--quinary-color);
-    font-size: 3em;
+    font-size: 2.5em;
     width: 300px;
     margin-top: 60px;
 }
@@ -42,9 +42,19 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1em 0;
+    margin: 0;
+    padding: 2em 0;
     width: 100%;
 }
 .footerLink {
     color: var(--quinary-color);
+}
+
+@media screen and (max-width: 768px) {
+    .footerMain {
+        flex-direction: column;
+    }
+    .footerSocials {
+        margin-top: 0;
+    }
 }
