--- a/src/components/Socials.module.css
+++ b/src/components/Socials.module.css
@@ -1,23 +1,21 @@
 .socials {
     position: absolute;
-    /* right: 0; */
-    top: 300px;
-    padding: 15px;
+    top: 500px;
+    padding: 5px;
     font-size: 2em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    /* height: 150px; */
     background-color: var(--primary-color-dark);
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
 }
 .socialLink {
-    padding: 10px 15px 5px;
     border-radius: 10px;
     margin: 0.5em 0;
     transition: 0.3s;
+    padding: 10px 10px 0;
 }
 .socialLink:hover {
     background-color: var(--primary-text-color);
