--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -2,7 +2,7 @@
     padding-bottom: 6em;
     background-color: var(--quinary-color);
     background-image: url("/src/images/backgroundportfolioalter.png");
-    background-position: 0 20px;
+    background-position: top center;
     background-repeat: no-repeat;
     background-size: contain;
 }
