--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -4,31 +4,11 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: var(--primary-color);
-
     height: 85px;
     width: 100%;
     z-index: 100;
     box-shadow: 0 0px 7px rgba(0, 0, 0, 0.5);
     text-transform: uppercase;
-}
-
-.navLinks,
-.navTitle {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    font-size: 0.8em;
-}
-.navLinks {
-    margin-right: 2em;
-}
-.navItem {
-    padding: 20px;
-    transition: 0.3s;
-    border-radius: 10px;
-}
-.navItem:hover {
-    background-color: var(--primary-color-dark);
 }
 
 .navPic {
@@ -70,9 +50,54 @@ nav {
 }
 
 .navLinks {
+    /* transform: translateY(-100%); */
+    transition: transform 0.3s ease-in-out;
+    margin-right: 2em;
     display: flex;
-    gap: 1rem;
+    list-style: none;
+    font-size: 0.8em;
 }
+
+.navTitle {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    font-size: 0.8em;
+}
+
+.navItem {
+    padding: 20px;
+    transition: 0.3s;
+    border-radius: 5px;
+    border: 0px solid transparent;
+}
+.navItem:hover {
+    background-color: var(--primary-color-dark);
+}
+.menu {
+    order: 1;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.2s ease-out;
+}
+
+.open {
+    max-height: 500px; /* This value should be greater than the height of the menu */
+}
+
+.navLinks.open {
+    /* When the menu button is clicked, bring the menu on the screen */
+    transform: translateY(0);
+}
+
 @media screen and (max-width: 768px) {
     .navLinks {
         display: none;
@@ -87,5 +112,8 @@ nav {
     }
     .navItem {
         border-radius: 0;
+    }
+    .menu {
+        flex-direction: column;
     }
 }
