--- a/src/components/AboutMe.module.css
+++ b/src/components/AboutMe.module.css
@@ -27,11 +27,16 @@ p {
 .skillsListItem {
     margin-bottom: 10px;
     margin-right: 10px;
-    background-color: var(--tertiary-color);
-    padding: 15px;
-    border-radius: 5px;
+    border: 1px solid var(--tertiary-color);
     font-size: 1.1em;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    background: transparent;
+}
+.skillsListItem:hover {
+    border-color: var(--secondary-color);
+    transition: border-color 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 992px) {
@@ -56,7 +61,7 @@ p {
     }
     .skillsListItem {
         font-size: 0.9em;
-        padding: 8px;
+        padding: 2px;
     }
     .skillsList {
         margin-bottom: 0.5em;
