--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -1,6 +1,6 @@
 .contact {
     padding-top: 100px;
-    padding-bottom: 6em;
+    padding-bottom: 150px;
     background-color: var(--quinary-color);
     background-image: url("/src/images/backgroundportfolioalter.png");
     background-position: center 80px;
