--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -4,21 +4,81 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: var(--primary-color);
-    height: 85px;
+    height: 50px;
     width: 100%;
     z-index: 100;
     box-shadow: 0 0px 7px rgba(0, 0, 0, 0.5);
     text-transform: uppercase;
+
+    visibility: hidden;
+    opacity: 0;
+    transition:
+        opacity 0.3s ease-out,
+        visibility 0.3s ease-out; /* transition effect */
+}
+.navVisible {
+    visibility: visible;
+    opacity: 1;
 }
 
+.navTitle {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    font-size: 0.8em;
+}
+.navName {
+    cursor: pointer;
+}
 .navPic {
     margin: 0 2em;
-    width: 70px;
-    height: 70px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     object-fit: cover;
     object-position: 50% 20%;
     box-shadow: 0 0px 7px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+.navItem {
+    padding: 10px;
+    transition: 0.3s;
+    border-radius: 5px;
+    margin: 0 1em;
+    cursor: pointer;
+}
+.navItem:hover {
+    background-color: var(--primary-color-dark);
+}
+.navItemActive {
+    background-color: var(--primary-color-dark);
+    outline: 1px solid var(--quinary-color);
+    border-radius: 5px;
+}
+
+.navLinks {
+    margin-right: 2em;
+    display: flex;
+    list-style: none;
+    font-size: 0.8em;
+}
+.navLinksActive {
+    display: block;
+    position: absolute;
+    background-color: var(--primary-color);
+    width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    text-align: end;
+    top: 50px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 0.8em;
+}
+.navLinksActive li {
+    padding: 15px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.171);
 }
 
 .menuIcon {
@@ -30,77 +90,12 @@ nav {
     color: var(--quinary-color);
 }
 
-.navLinksActive {
-    display: block;
-    position: absolute;
-    background-color: var(--primary-color);
-    width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    text-align: end;
-    top: 85px;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    font-size: 0.8em;
-}
-
-.navLinksActive li {
-    padding: 20px 20px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.171);
-}
-
-.navLinks {
-    /* transform: translateY(-100%); */
-    transition: transform 0.3s ease-in-out;
-    margin-right: 2em;
-    display: flex;
-    list-style: none;
-    font-size: 0.8em;
-}
-
-.navTitle {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    font-size: 0.8em;
-}
-
-.navItem {
-    padding: 20px;
-    transition: 0.3s;
-    border-radius: 5px;
-    border: 0px solid transparent;
-}
-.navItem:hover {
-    background-color: var(--primary-color-dark);
-}
-.menu {
-    order: 1;
-    display: flex;
-
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    max-height: 0;
-    transition: max-height 0.2s ease-out;
-}
-
-.open {
-    max-height: 500px; /* This value should be greater than the height of the menu */
-}
-
-.navLinks.open {
-    /* When the menu button is clicked, bring the menu on the screen */
-    transform: translateY(0);
-}
-
 @media screen and (max-width: 768px) {
     .navLinks {
         display: none;
+    }
+    .navLinks:hover {
+        background-color: var(--primary-color-dark);
     }
 
     .menuIcon {
@@ -109,9 +104,14 @@ nav {
 
     .navLinksActive {
         display: block;
+        max-height: 90vh;
+        padding: 0;
+        margin: 0;
     }
     .navItem {
         border-radius: 0;
+        margin: 0;
+        padding: 0;
     }
     .menu {
         flex-direction: column;
