--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -1,5 +1,5 @@
 .contact {
-    padding-top: 200px;
+    padding-top: 250px;
     padding-bottom: 450px;
     background-color: var(--quinary-color);
     background-image: url("/src/images/backgroundportfolioalter.png");
@@ -42,6 +42,11 @@ button {
 }
 textarea {
     resize: none;
+}
+@media screen and (max-width: 1200px) {
+    .contact {
+        padding-bottom: 250px;
+    }
 }
 
 @media screen and (max-width: 768px) {
