--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -11,13 +11,13 @@
     width: 90vw;
 }
 .projectBox:not(:last-child) {
-    margin-bottom: 5em;
+    margin-bottom: 250px;
 }
 .projectText {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1em;
+    width: 500px;
 }
 .projectImage {
     width: 400px;
@@ -29,8 +29,13 @@
     margin: 1em;
 }
 .projectDescript {
-    margin: auto 0;
+    width: 100%;
     text-align: start;
+}
+.projectLinks {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 
 @media screen and (max-width: 1200px) {
@@ -40,7 +45,20 @@
         width: 80%;
     }
     .projectDescript {
-        width: 100%;
+        width: 90vw;
+    }
+    .projectLinks {
+        align-items: center;
+        width: 70vw;
+        flex-direction: column;
+    }
+    .projectBox:not(:last-child) {
+        margin-bottom: 150px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .projectText {
+        width: 90vw;
     }
 }
 @media screen and (max-width: 460px) {
