--- a/src/components/AboutMe.module.css
+++ b/src/components/AboutMe.module.css
@@ -1,15 +1,19 @@
+h2 {
+    padding-top: 40px;
+}
 h3 {
-    margin: 10px 0;
+    margin: 0;
 }
 .aboutMeSection {
     display: flex;
     width: 70%;
     justify-content: space-evenly;
+    padding-bottom: 80px;
 }
 p {
     font-size: 1.2em;
     width: 300px;
-    text-align: center;
+    margin-left: 50px;
 }
 .aboutMeContact {
     display: flex;
