tertiary color update

--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,8 @@
     --secondary-text-color: #fcfcfc;
     --secondary-color: #eb7900;
     --quinary-color: #f4f5f5;
-    --tertiary-color: #9596bd;
-    /* --quaternary-color-dark: #00adb3; */
-    /* --quaternary-color: #24f1ff; */
+    --tertiary-color: #3498db;
+    --quaternary-color: #24f1ff;
 }
 
 html,
